Kubernetes/k8s-1/service-discovery/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8s-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /alpaca
          backend:
            serviceName: alpaca-prod
            servicePort: 8080
        - path: /bandicoot
          backend:
            serviceName: bandicoot-prod
            servicePort: 8080
