Kubernetes/k8s-1/service-discovery/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8s-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /
          backend:
            serviceName: alpaca
            servicePort: 8080
        - path: /
          backend:
            serviceName: alpaca
            servicePort: 8080
