Kubernetes/k8s-1/service-discovery/single-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress
spec:
  backend:
    serviceName: alpaca-prod
    servicePort: 8080
